# tauri-dotnet

./: .gitignore  Cargo.toml  README.md  Tauri.Net.sln
Tauri.Net/: StringInterop.cs
Tauri.Net.Test/: Cargo.toml  PrintRustString.cs  Tauri.Net.Test.csproj
Tauri.Net.Test/src/: main.rs
src/: ffi.rs  lib.rs
src/api/: path.rs
