[package]
name = "tauri-dotnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
netcorehost = { version = "0.15.1", features = ["nethost"] }
tauri = { version = "1.5.3", features = ["api-all"] }

[workspace]
members = ["Tauri.Net.Test"]

[dependencies]
netcorehost = { workspace = true }
tauri = { workspace = true }
